Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p>This UI looks best on 1920 x 1080 res.</p>
 
 <p>TellMeWhen is setup for Windwalker Monk only, you'll have to configure it for other classes.
-<img src="screenshot.jpg" alt="Screenshot"></p>
+<a href="http://imgur.com/pY0LiPc"><img src="http://i.imgur.com/pY0LiPc.jpg" title="Hosted by imgur.com"></a></p>
         </section>
 
         <footer>
