--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Nokando : A World of Warcraft Compilation" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Nokando by Zeaksblog</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>Nokando</title>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Zeaksblog/NoKanDo">View on GitHub</a>
-
-          <h1 id="project_title">Nokando</h1>
-          <h2 id="project_tagline">A World of Warcraft Compilation</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Zeaksblog/NoKanDo/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Zeaksblog/NoKanDo/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <header>
+        <h1>Nokando</h1>
+        <p>A World of Warcraft Compilation</p>
+        <p class="view"><a href="https://github.com/Zeaksblog/NoKanDo">View the Project on GitHub <small>Zeaksblog/NoKanDo</small></a></p>
+        <ul>
+          <li><a href="https://github.com/Zeaksblog/NoKanDo/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Zeaksblog/NoKanDo/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Zeaksblog/NoKanDo">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <p>How to install.</p>
 
 <ul>
@@ -50,20 +46,16 @@
 
 <p>This UI looks best on 1920 x 1080 res.</p>
 
-<p>TellMeWhen is setup for Windwalker Monk only, you'll have to configure it for other classes.
-<a href="http://imgur.com/pY0LiPc"><img src="http://i.imgur.com/pY0LiPc.jpg" title="Hosted by imgur.com"></a></p>
+<p>TellMeWhen is setup for Windwalker Monk only, you'll have to configure it for other classes.</p>
+
+<p><a href="http://imgur.com/pY0LiPc"><img src="http://i.imgur.com/pY0LiPc.jpg" title="NoKanDo UI"></a></p>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Nokando maintained by <a href="https://github.com/Zeaksblog">Zeaksblog</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/Zeaksblog">Zeaksblog</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
