Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 <li>Open WTF &gt; Account &gt; ACCOUNT-NAME &gt; SERVERNAME &gt; CHARACTER-NAME and change to your characters name.</li>
 </ul><p>Log into wow, once it has loaded use these commands and select the Nokando - FeatherMoon Profiles for each addon. (copy profile usually)</p>
 
-<p>esc &gt; interface &gt; addons &gt; Recount &gt; profiles</p>
+<p>esc &gt; interface &gt; addons &gt; Recount &gt; profiles
+esc &gt; interface &gt; addons &gt; Dominos &gt; Profiles - Select Monk, then click "Set"</p>
 
-<p>/sldt global
-/dominos
-/tmw
-/masque</p>
-
-<p>This UI looks best on 1920 x 1080 res.</p>
+<ul>
+<li>/sldt global</li>
+<li>/tmw</li>
+<li>/masque (load masque options if they are not loaded)</li>
+</ul><p>This UI looks best on 1920 x 1080 res.</p>
 
 <p>TellMeWhen is setup for Windwalker Monk only, you'll have to configure it for other classes.</p>
 
